@@ -1,3 +1,11 @@
+2011-09-12  Bastian Maerkisch  <bmaerkisch@web.de>
+
+	* config/mingw/Makefile: Fix building gnuplot.ps and gnuplot.pdf.
+	Include figures in gnuplot.pdf. Define new targets 'console', 'windows'
+	and 'pipes' to build different versions of gnuplot. Use separate
+	file extensions for each version. Let 'make all' build all versions.
+	Match 'install' target to Tatsuro Matsuoka's packages.
+
 2011-09-09  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* docs/doc2tex.c docs/titlepag.tex:  Tweak format of TeX documentation
